tests/neg-custom-args/erased/erased-var.scala
import language.experimental.erasedDefinitions
object Test {
  erased var i: Int // error // error
}
